load books from html pages

--- a/book-project-sample.json
+++ b/book-project-sample.json
@@ -1,6 +1,46 @@
 {
     "bookName": "my-load-book-name",
+    "book": {
+        "author": "",
+        "description": "",
+        "genres": [],
+        "title": "",
+        "docId": 1
+    },
     "baseURL": "https://my-load-book-website/path",
+    "chapterList": {
+        "URL": "${baseURL}/${bookName}.json?book=${bookName}",
+        "accept": "application/json",
+        "book": {
+            "author": {
+                "path": "$.pageProps.book.author"
+            },
+            "description": {
+                "path": "$.pageProps.book.description"
+            },
+            "genres": {
+                "path": "$.pageProps.book.genres[*].title"
+            },
+            "title": {
+                "path":"$.pageProps.book.title"
+            }
+        }
+    },
+    "chapters": {
+        "path": "$.pageProps.book.chapters.*.url",
+        "URL": "${baseURL}${chapter}.json",
+        "accept": "application/json",
+        "chapter": {
+            "title": {
+                "path": "$.pageProps.chapter.title"
+            },
+            "content": {
+                "path": "$.pageProps.chapter.content.text"
+            }
+        }        
+    },
     "debugFiddler": false,
-    "bookDir": "./book"
+    "bookDir": "./book",
+    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36",
+    "loadDelay": 500
 }
