--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "css-select": "^5.1.0",
     "dom-serializer": "^2.0.0",
+    "dotenv": "^16.4.5",
     "htmlparser2": "^8.0.1",
     "https-proxy-agent": "^5.0.1",
     "jsonpath-plus": "^7.2.0",
